# rgd-zbot

./: .env.example  .gitignore  Cargo.toml  LICENSE  LICENSE.md  Procfile  README.md
.github/workflows/: rust.yml
src/: gd.rs  main.rs  reddit.rs
