[package]
name = "rgd-zbot"
version = "2.0.0"
edition = "2024"

[dependencies]
roux = "=2.2.15"
tokio = { version = "=1.51.0", features = ["full"] }
reqwest = "=0.12.28"
dotenvy = "=0.15.7"
regex = "=1.12.3"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
anyhow = "=1.0.102"
base64 = "=0.22.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
